--- a/css/styles.css
+++ b/css/styles.css
@@ -256,6 +256,13 @@ Navbar
         font-size: 1.5rem;
         text-transform: capitalize;
     }
+    .nav-register{
+        display: flex;
+        font-size: 1.5rem;
+        text-transform: capitalize;
+        align-items: center;
+        margin-left: auto;
+    }
     .nav-link {
         color: var(--clr-white);
         margin-right: 3rem;
