Added user email for session variables/Modified css

--- a/css/styles.css
+++ b/css/styles.css
@@ -193,6 +193,13 @@ Navbar
     justify-content: space-between;
     align-items: center;
 }
+.nav-register{
+        display: flex;
+        font-size: 1.5rem;
+        text-transform: capitalize;
+        align-items: center;
+        margin-left: auto;
+    }
 .nav-links {
     display: none;
 }
