--- a/css/styles.css
+++ b/css/styles.css
@@ -1126,3 +1126,20 @@ REGISTER PAGE
     color: white;
 
 }
+
+
+/*
+===================
+Review Section
+===================
+*/
+
+.review {
+    height: 100%;
+    width: 500px
+    padding: 0;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
