--- a/css/styles.css
+++ b/css/styles.css
@@ -172,6 +172,7 @@ p {
     align-items: center;
     justify-content: center;
 }
+
 /*
 =============== 
 Navbar
@@ -537,6 +538,178 @@ Title
     font-size: 0.85em;
     margin-right: 1rem;
 }
+
+ /*
+=============== 
+NUMBERS SECTION 
+===============
+*/
+
+.numbers-center{
+  max-width: 1170px;
+  margin: 0 auto;
+  display: grid;
+  gap: 2rem;
+}
+
+@media screen and (min-width: 768px) {
+  .numbers-center {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media screen and (min-width: 992px) {
+  .numbers-center{
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+.numbers-center article {
+  background: var(--white);
+  padding: 1rem 2rem;
+  border-radius: var(--borderRadius);
+  border-bottom: 4px solid transparent;
+}
+
+.numbers-center article span {
+  font-size: 4rem;
+  font-weight: 700;
+  line-height: 1.25;
+}
+
+.numbers-center article p {
+  margin: 0;
+  text-transform: capitalize;
+  font-size: 1.5rem;
+}
+
+.numbers-center article:nth-of-type(1) {
+  border-bottom-color: #f59e0b;
+}
+.numbers-center article:nth-of-type(2) {
+  border-bottom-color: #14b8a6;
+}
+.numbers-center article:nth-of-type(3) {
+  border-bottom-color: #a855f7;
+}
+
+.numbers-center article {
+  background: var(--white);
+  padding: 1rem 2rem;
+  border-radius: var(--borderRadius);
+  border-bottom: 4px solid transparent;
+}
+
+.numbers-center article span {
+  font-size: 4rem;
+  font-weight: 700;
+  line-height: 1.25;
+}
+
+.numbers-center article p {
+  margin: 0;
+  text-transform: capitalize;
+  font-size: 1.5rem;
+}
+
+.numbers-center article:nth-of-type(1) {
+  border-bottom-color: #f59e0b;
+}
+.numbers-center article:nth-of-type(2) {
+  border-bottom-color: #14b8a6;
+}
+.numbers-center article:nth-of-type(3) {
+  border-bottom-color: #a855f7;
+}
+
+.numbers-center article {
+  background: var(--white);
+  padding: 1rem 2rem;
+  border-radius: var(--borderRadius);
+  border-bottom: 4px solid transparent;
+}
+
+.numbers-center article span {
+  font-size: 4rem;
+  font-weight: 700;
+  line-height: 1.25;
+}
+
+.numbers-center article p {
+  margin: 0;
+  text-transform: capitalize;
+  font-size: 1.5rem;
+}
+
+.numbers-center article:nth-of-type(1) {
+  border-bottom-color: #f59e0b;
+}
+.numbers-center article:nth-of-type(2) {
+  border-bottom-color: #14b8a6;
+}
+.numbers-center article:nth-of-type(3) {
+  border-bottom-color: #a855f7;
+}
+
+.numbers-center article {
+  background: var(--white);
+  padding: 1rem 2rem;
+  border-radius: var(--borderRadius);
+  border-bottom: 4px solid transparent;
+}
+
+.numbers-center article span {
+  font-size: 4rem;
+  font-weight: 700;
+  line-height: 1.25;
+}
+
+.numbers-center article p {
+  margin: 0;
+  text-transform: capitalize;
+  font-size: 1.5rem;
+}
+
+.numbers-center article:nth-of-type(1) {
+  border-bottom-color: #f59e0b;
+}
+.numbers-center article:nth-of-type(2) {
+  border-bottom-color: #14b8a6;
+}
+.numbers-center article:nth-of-type(3) {
+  border-bottom-color: #a855f7;
+}
+
+.numbers-center article {
+  background: var(--white);
+  padding: 1rem 2rem;
+  border-radius: var(--borderRadius);
+  border-bottom: 4px solid transparent;
+}
+
+.numbers-center article span {
+  font-size: 4rem;
+  font-weight: 700;
+  line-height: 1.25;
+}
+
+.numbers-center article p {
+  margin: 0;
+  text-transform: capitalize;
+  font-size: 1.5rem;
+}
+
+.numbers-center article:nth-of-type(1) {
+  border-bottom-color: #f59e0b;
+}
+.numbers-center article:nth-of-type(2) {
+  border-bottom-color: #14b8a6;
+}
+.numbers-center article:nth-of-type(3) {
+  border-bottom-color: #a855f7;
+}
+
+
+
 /*
 =============== 
 product
@@ -1133,3 +1306,4 @@ REGISTER PAGE
     color: white;
 
 }
+
