--- a/css/styles.css
+++ b/css/styles.css
@@ -178,6 +178,7 @@ p {
 Navbar
 ===============
 */
+/*   statistics */
 
 .navbar {
     height: 6rem;
@@ -299,7 +300,7 @@ Hero
     min-height: 100vh;
     margin-top: -6rem;
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-        url(../images/main-bcg.jpg) center/cover;
+        url(../images/shoe-hero.jpg) center/cover;
     display: grid;
     place-items: center;
     color: var(--clr-white);
@@ -805,7 +806,7 @@ PRODUCT REVIEW
 
 /* ratings */
 
-.review-center{
+.section.review-rating .review-center{
     justify-content: center;
     align-items: center;
 }
@@ -814,7 +815,7 @@ PRODUCT REVIEW
     margin-bottom: 50px;
 }
 
-.container {
+.section.review-rating .container {
   display: flex;
   border-radius: 15px;
   gap: 40px;
@@ -822,7 +823,7 @@ PRODUCT REVIEW
   justify-content: center;
   align-items: center;
 }
-.chart {
+.section.review-rating  .chart {
   /* width: 500px; */
   display: flex;
   justify-content: space-between;
@@ -830,7 +831,7 @@ PRODUCT REVIEW
   height: 100%;
 }
 
-.chart .rate-box {
+.section.review-rating  .chart .rate-box {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -839,25 +840,25 @@ PRODUCT REVIEW
   padding: 20px 0;
   padding: 10px;
 }
-.chart .rate-box > * {
+.section.review-rating  .chart .rate-box > * {
   height: 100%;
   display: flex;
   align-items: center;
   font-weight: 500;
   color: #444;
 }
-.rate-box .value {
+.section.review-rating .rate-box .value {
   display: flex;
   align-items: center;
 }
-.rate-box .value:hover {
+.section.review-rating .rate-box .value:hover {
   color: var(--clr-red-dark);
 }
-.chart .value {
+.section.review-rating .chart .value {
   font-size: 30px;
   cursor: pointer;
 }
-.rate-box .progress-bar {
+.section.review-rating .rate-box .progress-bar {
   border-width: 1px;
   position: relative;
   background-color: #cfd8dc91;
@@ -866,14 +867,13 @@ PRODUCT REVIEW
   border-radius: 100px;
   width: 350px;
 }
-.rate-box .progress-bar .progress {
+.section.review-rating .rate-box .progress-bar .progress {
   background-color: var(--clr-red-light);
   height: 100%;
   border-radius: 100px;
   transition: 300ms ease-in-out;
 }
-
-.global {
+.section.review-rating .global {
   height: 100%;
   width: 150px;
   display: flex;
@@ -882,23 +882,23 @@ PRODUCT REVIEW
   align-items: center;
   gap: 8px;
 }
-.one .fas {
+.section.review-rating .one .fas {
   color: #cfd8dc;
 }
 
-.two {
+.section.review-rating .two {
   background: linear-gradient(to right, var(--clr-red-light) 0%, transparent 0%);
   -webkit-background-clip: text !important;
   -webkit-text-fill-color: transparent;
   transition: 0.5s ease-in-out all;
 }
 
-.global > span {
+.section.review-rating .global > span {
   font-size: 90px;
   font-weight: 500;
 }
 
-.rating-icons {
+.section.review-rating .rating-icons {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -906,7 +906,7 @@ PRODUCT REVIEW
   width: 100%;
   height: 10%;
 }
-.rating-icons span {
+.section.review-rating .rating-icons span {
   position: absolute;
   display: flex;
   font-size: 30px;
@@ -915,24 +915,24 @@ PRODUCT REVIEW
   margin-bottom: 5px;
 }
 
-.total-reviews {
+.section.review-rating .total-reviews {
   font-size: 25px !important;
 }
 @media screen and (max-width: 992px) {
-    .review-center{
+    .section.review-rating .review-center{
         flex-direction: column;
     }
-    .container{
+    .section.review-rating .container{
         flex-direction: column-reverse;
         height: 500px;
     }
-    .chart{
+    .section.review-rating .chart{
         width: 90%;
     }
 }
 
 /* reviews */
-  #reviews {
+  .section.review-rating #reviews {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -940,7 +940,7 @@ PRODUCT REVIEW
     width: 100%;
     margin-top: 50px;
   }
-  .testimonial-heading {
+  .section.review-rating .testimonial-heading {
     letter-spacing: 1px;
     margin: 30px 0px;
     padding: 10px 20px;
@@ -950,21 +950,21 @@ PRODUCT REVIEW
     align-items: center;
   }
 
-  .testimonial-heading span {
+  .section.review-rating .testimonial-heading span {
     font-size: 1.3rem;
     color: #252525;
     margin-bottom: 10px;
     letter-spacing: 2px;
     text-transform: uppercase;
   }
-  .testimonial-box-container {
+  .section.review-rating .testimonial-box-container {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
     width: 100%;
   }
-  .testimonial-box {
+  .section.review-rating .testimonial-box {
     width: 500px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
     background-color: #ffffff;
@@ -973,74 +973,74 @@ PRODUCT REVIEW
     cursor: pointer;
     border-radius: var(--radius);
   }
-  .profile-img {
+  .section.review-rating .profile-img {
     width: 50px;
     height: 50px;
     border-radius: 50%;
     overflow: hidden;
     margin-right: 10px;
   }
-  .profile-img img {
+  .section.review-rating .profile-img img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     object-position: center;
   }
-  .profile {
+  .section.review-rating .profile {
     display: flex;
     align-items: center;
   }
-  .name-user {
+  .section.review-rating .name-user {
     display: flex;
     flex-direction: column;
   }
-  .name-user strong {
+  .section.review-rating .name-user strong {
     color: #3d3d3d;
     font-size: 1.1rem;
     letter-spacing: 0.5px;
   }
-  .name-user span {
+  .section.review-rating .name-user span {
     color: #979797;
     font-size: 0.8rem;
   }
-  .reviews {
+  .section.review-rating .reviews {
     color: #f9d71c;
   }
-  .box-top {
+  .section.review-rating .box-top {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 20px;
   }
-  .client-comment p {
+  .section.review-rating .client-comment p {
     font-size: 0.9rem;
     color: #4b4b4b;
   }
-  .testimonial-box:hover {
+  .section.review-rating .testimonial-box:hover {
     transform: translateY(-10px);
     transition: all ease 0.3s;
   }
 
   @media (max-width: 1060px) {
-    .testimonial-box {
+    .section.review-rating .testimonial-box {
       width: 45%;
       padding: 10px;
     }
   }
   @media (max-width: 790px) {
-    .testimonial-box {
+    .section.review-rating .testimonial-box {
       width: 100%;
     }
-    .testimonial-heading h1 {
+    .section.review-rating .testimonial-heading h1 {
       font-size: 1.4rem;
     }
   }
   @media (max-width: 340px) {
-    .box-top {
+    .section.review-rating .box-top {
       flex-wrap: wrap;
       margin-bottom: 10px;
     }
-    .reviews {
+    .section.review-rating .reviews {
       margin-top: 10px;
     }
   }
@@ -1219,7 +1219,7 @@ Register/Login/Verification Pages
     min-height: 100vh;
     margin-top: -6rem;
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-        url(../images/main-bcg.jpg) center/cover;
+        url(../images/shoe-hero.jpg) center/cover;
     display: grid;
     place-items: center;
     color: var(--clr-white);
@@ -1227,7 +1227,7 @@ Register/Login/Verification Pages
 .verification {
     min-height: 100vh;
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-        url(../images/main-bcg.jpg) center/cover;
+        url(../images/shoe-hero.jpg) center/cover;
     display: grid;
     place-items: center;
     color: var(--clr-white);
@@ -1238,8 +1238,28 @@ Register/Login/Verification Pages
 Admin Page
 ===================
 */
+/* statistic */
+  .statistic .container {
+    width: 30%;
+    max-width: 1000px;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@media (max-width: 767px) {
+    .statistic .container {
+        flex-direction: column;
+        width: 80%;
+    }
+}
+
+
+
+/* others */
 .dashboard-center {
-  margin-top: 50px;
+  margin: 50px auto;
 }
 .dashboard {
   background: var(--clr-white);
@@ -1254,7 +1274,12 @@ Admin Page
   border-top-left-radius: var(--radius);
   border-top-right-radius: var(--radius);
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+@media (max-width: 767px){    
+    .btn-container {
+        grid-template-columns: 1fr 1fr ;
+    }
 }
 .tab-btn:nth-child(1) {
   border-top-left-radius: var(--radius);
@@ -1484,9 +1509,21 @@ Admin Page
     padding: 10px 5px;
   }
   .dashboard-content {
-    padding: 5px;
+    padding: 20px 5px;
   }
 }
+
+@media (max-width: 350px) {
+  .table-row {
+    width: 240px;
+    margin: auto;
+    
+  }
+  .table.user{
+    font-size: 0.6rem;
+  }
+}
+
 
 /* alert */
 .alert {
@@ -1510,6 +1547,7 @@ Admin Page
 .alert-load{
   background: var(--clr-grey-8);
   
+
   
 /*
 ===================
