--- a/css/styles.css
+++ b/css/styles.css
@@ -1054,40 +1054,34 @@ PRODUCT REVIEW
 About Page
 ===============
 */
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@900&family=Sumana:wght@700&display=swap");
 .about-page{
   display: flex;
   flex-direction: column;
+  font-family: "Merriweather", serif;
+  padding: 0 10%;
 }
+
 .about-page .people{
   width: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  
 }
 .about-text {
     line-height: 2;
-    max-width: 45em;
+    max-width: 840px;
     margin: 0 auto;
     margin-top: 2rem;
 }
-@import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@900&family=Sumana:wght@700&display=swap");
-body {
-  align-items: center;
-  background-color: #f2f2f2;
-  display: flex;
-  font-family: "Merriweather", serif;
-  flex-wrap: wrap;
-  justify-content: center;
-  height: 100vh;
-  margin: 0;
-}
-.person {
+.about-page .person {
   align-items: center;
   display: flex;
   flex-direction: column;
   width: 280px;
 }
-.container {
+.about-page .container {
   border-radius: 50%;
   height: 312px;
   -webkit-tap-highlight-color: transparent;
@@ -1095,7 +1089,7 @@ body {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   width: 400px;
 }
-.container:after {
+.about-page .container:after {
   background-color: #f2f2f2;
   content: "";
   height: 10px;
@@ -1103,10 +1097,10 @@ body {
   top: 390px;
   width: 100%;
 }
-.container:hover {
+.about-page .container:hover {
   transform: scale(0.54);
 }
-.container-inner {
+.about-page .container-inner {
   clip-path: path(
     "M 390,400 C 390,504.9341 304.9341,590 200,590 95.065898,590 10,504.9341 10,400 V 10 H 200 390 Z"
   );
@@ -1114,7 +1108,7 @@ body {
   transform-origin: 50%;
   top: -200px;
 }
-.circle {
+.about-page .circle {
   background-color: #fee7d3;
   border-radius: 50%;
   cursor: pointer;
@@ -1125,44 +1119,44 @@ body {
   top: 210px;
   width: 380px;
 }
-.img {
+.about-page .img {
   pointer-events: none;
   position: relative;
   transform: translateY(20px) scale(1.15);
   transform-origin: 50% bottom;
   transition: transform 300ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.container:hover .img {
+.about-page .container:hover .img {
   transform: translateY(0) scale(1.2);
 }
-.img1 {
+.about-page .img1 {
   left: 22px;
   top: 164px;
   width: 340px;
 }
-.img2 {
+.about-page .img2 {
   left: -46px;
   top: 174px;
   width: 444px;
 }
-.img3 {
+.about-page .img3 {
   left: -16px;
   top: 144px;
   width: 466px;
 }
-.divider {
+.about-page .divider {
   background-color: #ca6060;
   height: 1px;
   width: 160px;
 }
-.name {
+.about-page .name {
   color: #404245;
   font-size: 36px;
   font-weight: 600;
   margin-top: 16px;
   text-align: center;
 }
-.title {
+.about-page .title {
   color: #6e6e6e;
   font-family: arial;
   font-size: 14px;
